--- a/_config.yml
+++ b/_config.yml
@@ -163,8 +163,13 @@ liquid:
 markdown: kramdown
 highlighter: rouge
 lsi: false
+safe: true
+source: /Users/babernethy/repos/babernethy.github.io/
 excerpt_separator: "\n\n"
 incremental: false
+gist:
+  noscript: false
+
 
 
 # Markdown Processing
@@ -177,7 +182,8 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-
+  math_engine: mathjax
+  syntax_highlighter: rouge
 
 # Sass/SCSS
 sass:
