--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,10 @@
 main:
-  - title: "Links"
-    url: /links/
+  - title: "Popular"
+    url: /popular/
   - title: "Posts"
     url: /year-archive/
+  - title: "Links"
+    url: /links/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
