another popular fix

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
   - title: "Popular"
-    url: /popular
+    url: /popular.html
   - title: "Posts"
     url: /year-archive/
   - title: "Links"
