category links working

--- a/_config.yml
+++ b/_config.yml
@@ -282,6 +282,8 @@ defaults:
       read_time: true
       share: true
       related: true
+      # show_date: true
+      # show_comments: true
   # _pages
   - scope:
       path: "_pages"
