update bluesky url

--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
       url: "https://bruceabernethy.com"
     - label: "Bluesky"
       icon: "fa-brands fa-bluesky"
-      url: "https://bsky.app/profile/babernethy.bsky.social"
+      url: "https://bsky.app/profile/bruceabernethy.com"
     - label: "Twitter/X"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://x.com/babernethy"
